--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "nodemon ./index.js",
+    "dev": "nodemon ./index.js"
   },
   "dependencies": {
     "@sentry/node": "^5.9.0",
